# stations-api-tests

./: .gitignore  pyproject.toml  readme.MD
test/: conftest.py
test/api/: api_utils.py
test/api/clients/base/: base_client.py
test/api/clients/stations/: stations_client.py  stations_resources.py
test/api/data/builder/: test_station_builder.py
test/api/data/dto/: test_station_dto.py
test/features/: step_definitions.py  test_stations.feature
test/utils/: enum.py  helpers.py
