[tool.poetry]
name = "virta-project"
version = "0.0.1"
description = "Testing EV stations"
authors = ["Alin Nitu"]
readme = "README.md"
packages = [{include = "test"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-playwright = "^0.4.3"
pytest-bdd = "^7.0.1"
pytest-html-reporter = ">=0.2.9"
pytest-json-report = "^1.5.0"
pytest = "^7.4.3"
pytest-xdist = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -q -s"
testpaths = "test/"
python_files = "step_*.py"
markers = [
    'smoke',
    'regression',
    'get-version',
    'get-interval',
    'all-commands-sync',
    'all-commands-async'
]